<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.wallpad.delivery.viewmodel.DeliveryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        tools:context=".fragment.NoticesFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginTop="@dimen/_13dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvAMPM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/notosans_regular"
                android:text="@{ viewmodel.txtAMorPM }"
                android:textColor="@color/current_time_color"
                android:textSize="@dimen/_32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tvCurrentTimeInfo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="오전" />

            <TextClock
                android:id="@+id/tvCurrentTimeInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5dp"
                android:fontFamily="@font/notosans_regular"
                android:format12Hour="hh:mm"
                android:gravity="center"
                android:includeFontPadding="false"
                android:padding="0dp"
                android:textColor="@color/current_time_color"
                android:textSize="@dimen/_32sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvAMPM"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="09:30" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/btnClose"
            android:layout_width="@dimen/_60dp"
            android:layout_height="@dimen/_60dp"
            android:layout_marginTop="@dimen/_13dp"
            android:layout_marginEnd="@dimen/_32dp"
            android:clickable="true"
            android:src="@drawable/btn_close"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.wallpad.delivery.view.customview.TextViewWithoutPadding
            android:id="@+id/tvNoticeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginTop="@dimen/_98dp"
            android:fontFamily="@font/notosans_regular"
            android:text="@string/app_title"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/_924dp"
            android:layout_height="@dimen/_420dp"
            android:layout_marginStart="@dimen/_50dp"
            android:layout_marginTop="@dimen/_140dp"
            android:layout_marginEnd="@dimen/_50dp"
            android:background="@drawable/box_line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/titleContainer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50dp"
                android:layout_marginStart="@dimen/_1dp"
                android:layout_marginTop="@dimen/_1dp"
                android:layout_marginEnd="@dimen/_1dp"
                android:background="@drawable/box_line_bg"
                android:orientation="horizontal"
                android:paddingStart="@dimen/_30dp"
                android:paddingEnd="@dimen/_30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/average_power_usage_label"
                    android:layout_width="@dimen/delivery_item_txt_timesend_size"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosans_regular"
                    android:gravity="center"
                    android:text="@string/title_delivery_send"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0" />

                <ImageView
                    style="@style/div"
                    android:src="@drawable/image_ss_line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/average_power_usage_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textViewWithoutPadding"
                    android:layout_width="@dimen/delivery_item_txt_time_receive_size"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosans_regular"
                    android:gravity="center"
                    android:text="@string/delivery_title_receiver"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    style="@style/div"
                    android:src="@drawable/image_ss_line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/average_power_usage_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="@dimen/_168dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosans_regular"
                    android:gravity="center"
                    android:text="@string/delivery_title_name"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    style="@style/div"
                    android:src="@drawable/image_ss_line"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/average_power_usage_label"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="@dimen/_130dp"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/notosans_regular"
                    android:gravity="center"
                    android:text="@string/delivery_title_pay"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_22sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </LinearLayout>

            <com.wallpad.delivery.view.customview.loadmore.GsmartRecyclerview
                android:id="@+id/noticeList"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="@dimen/_30dp"
                android:layout_marginEnd="@dimen/_30dp"
                android:layout_marginBottom="@dimen/_1dp"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:scrollTo="@{viewmodel.scrollToTop}"
                android:isLoad="@{viewmodel.isLoadingmore}"
                android:setLoadmoreListener="@{viewmodel.iLoadmore}"
                android:hasNoMore="@{viewmodel.hasNoMoreItem}"
                android:adapter="@{viewmodel.adapter}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleContainer" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>